--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -100,11 +100,11 @@ body {
 }
 
 /*
- * Control Navbar
+ * ControleProduto Navbar
  */
 
-.ctl-dashnav {
-
+.ctl-dashnav, .ctl-dashnav li a {
+  box-shadow: inset -1px 0 0 rgb(0 0 0 / 25%);
 }
 
 .ctl-dashnav li a {
@@ -129,19 +129,81 @@ body {
   background-color: #0062cc;
 }
 
-.ctl-droparrow::after{
-    display: inline-block;
-    margin-left: .255em;
-    vertical-align: .255em;
-    content: "";
-    border-top: .3em solid;
-    border-right: .3em solid transparent;
-    border-bottom: 0;
-    border-left: .3em solid transparent;
+.ctl-head-menu{
+  border-bottom: 1px solid #c7c7c7;
+  background: #f6f6f6;
+}
+
+.ctl-head-menu h4{
+  margin-bottom: .1rem;
+}
+
+.ctl-head-menu .dropdown{
+  margin-bottom: -0.3rem;
+}
+
+.ctl-droparrow::before{
+  display: inline-block;
+  margin-left: .255em;
+  margin-right: .600em;
+  vertical-align: .255em;
+  content: "";
+  border-top: .3em solid;
+  border-right: .3em solid transparent;
+  border-bottom: 0;
+  border-left: .3em solid transparent;
+  transition: transform .4s;
+}
+
+.ctl-droparrow[aria-expanded="true"]::before{
+    transform: rotate(0deg);
+}
+
+.ctl-droparrow[aria-expanded="false"]::before{
+    transform: rotate(-90deg);
 }
 
 .ctl-dashnav li a img {
   filter: white(100%);
   width: 20px;
   height: 20px;
+}
+
+.ctl-dropdown-right{
+  right:15px;
+  left:auto;
+}
+
+.ctl-user-menu{
+  text-decoration: none;
+  display: inline-flex;
+  align-content: center;
+  align-items: center;
+  padding-right: 10px;
+  font-size: 20px;
+}
+
+.ctl-user-menu:hover{
+  text-decoration: none;
+}
+
+.ctl-user-menu .name{
+  margin-left: 6px;
+}
+
+.ctl-user-menu img{
+  border-radius: 20px;
+}
+
+.ctl-user-menu::after{
+  display: inline-block;
+  margin-left: .355em;
+  margin-right: .600em;
+  vertical-align: .255em;
+  content: "";
+  border-top: .3em solid;
+  border-right: .3em solid transparent;
+  border-bottom: 0;
+  border-left: .3em solid transparent;
+  transition: transform .4s;
 }
